# tekcit-ai

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: api-festival-ai-workflow.yml
activity_ai/: recommend_activity.py
activity_ai/server/: routes.py  schemas.py
review_ai/: config.py  review_analyze.py
review_ai/server/: main.py  routes.py
userchatbot_ai/: api.py  chatbot_app.py  chatbot_setup.py  config.py  테킷_이용정책.txt
userchatbot_ai/chroma_db/: chroma.sqlite3
userchatbot_ai/server/: routes.py
