[project]
name = "tekcit-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "정재운",email = "jaeun101501@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "boto3 (>=1.40.19,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
]

[tool.poetry]
name = "teckit-ai"
version = "0.1.0"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
