[project]
name = "tekcit-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "정재운",email = "jaeun101501@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "boto3 (>=1.40.19,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "requests (>=2.31.0,<3.0.0)",
    "pydantic (>=2.1.1,<3.0.0)",
    "langchain-aws (>=0.2.31,<0.3.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-community (>=0.3.29,<0.4.0)"
]

[tool.poetry]
name = "tekcit-ai"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
python-dotenv = ">=1.1.1,<2.0.0"
boto3 = ">=1.40.19,<2.0.0"
fastapi = ">=0.115.14,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
requests = ">=2.31.0,<3.0.0"
pydantic = ">=2.1.1,<3.0.0"

langchain = ">=0.3.27,<0.4.0"
langchain-community = ">=0.3.29,<0.4.0"
langchain-aws = ">=0.2.31,<0.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
